<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/catalogues"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/catalogues" />
        <item
            android:id="@+id/produits"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/produits" />
        <item
            android:id="@+id/commandes"
            android:icon="?attr/actionModeCopyDrawable"
            android:title="@string/commandes" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/profil" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
